<?xml version="1.0"?>
<package>
  <name>chatter_gui</name>
  <version>0.1.0</version>
  <description>
    A GUI application for ROS2 that facilitates communication between different nodes using a chatter pattern.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <author>Your Name</author>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
